# src/stock_entry/application/request/revert_consume_request.go
@@ -1,0 +1,8 @@
+package request
+
+// RevertConsumeRequest representa la petición para revertir un consumo de stock
+type RevertConsumeRequest struct {
+	SKU       string `json:"sku" binding:"required"`
+	Quantity  int    `json:"quantity" binding:"required,min=1"`
+	Reference string `json:"reference" binding:"required"`
+}
